css/style.css
body{
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 150%;
}

header{
  background-color: #b9b9b9;
  text-align: center; 
}

nav{
  background-color: #91c4ea;
}

main{
  background-color: #b9b9b9;
  font-size: 120%;
}

footer{
  background-color: #4787b7;
}

li{
  display: inline-block;
  width: 27%;
  text-align: center;
  height: 100px;
}

h1{
  text-align: center;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  color: #000000;
}

p{
  line-height: 1.5;
}

